--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
                              "footer footer footer";
 
         grid-template-columns: 200px auto 1fr;
-        grid-template-rows: 240px 1850px 1470px;
+        grid-template-rows: 240px 1850px 1550px;
 
 }
 
@@ -98,7 +98,7 @@
                 "footer footer footer";
 
         grid-template-columns: 200px auto 1fr;
-        grid-template-rows: 240px 820px 1400px;
+        grid-template-rows: 240px 820px 1450px;
 }
 
 
@@ -412,23 +412,27 @@ main {
 .nombreyapellido {
         margin-top: 20px;
         margin-bottom: 20px;
+        margin-left: 10px;
 }
 
 .email,
 .telefono {
 
         margin-bottom: 20px;
+        margin-left: 10px;
 }
 
 
 .producto {
 
         margin-top: 20px;
+        
 }
 
 .guitarraelectrica {
         margin-top: 20px;
         margin-bottom: 20px;
+        margin-left: 10px;
 }
 
 .guitarraacustica,
@@ -436,6 +440,7 @@ main {
 .amplificador {
 
         margin-bottom: 20px;
+        margin-left: 10px;
 }
 
 .comentario {
@@ -465,6 +470,11 @@ main {
 
 }
 
+
+#irAlFooter h3 {
+
+        margin: 30px;
+}
 
 
 
@@ -497,6 +507,10 @@ main {
         justify-content: space-evenly;
         align-items: center;
         margin-top: 80px;
+}
+
+.logoFooter img{
+        width: 190px;
 }
 
 .navFooter {
@@ -567,22 +581,35 @@ main {
 }
 
 .redes {
-
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
         margin-top: 50px;
-        margin-right: 40px;
+       
 }
 
 .redesIndex{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
         margin-top: 50px;
-        margin-right: 10px;
+       
 
 }
 
-.redesElectrica{
+.redesContacto{
 
-        margin-top: 20px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+        margin-top: 50px;
+        margin-right: 30px;
+       
+
 }
-
 .suscribite {
 
         margin-top: 40px;
@@ -626,7 +653,7 @@ main {
                                      "header footer";
 
                 grid-template-columns: 0.25fr 1fr;
-                grid-template-rows: 1fr 1600px 1650px;
+                grid-template-rows: 1fr 1750px 1700px;
 
         }
 
@@ -638,6 +665,7 @@ main {
         .abajo {
 
                 margin-top: 20px;
+             
                 
         }
 
@@ -658,7 +686,7 @@ main {
         }
 
         .redesIndex {
-                margin-left: 100px;
+                margin-left: 120px;
         }
 
 
@@ -671,17 +699,17 @@ main {
 /*-------------------------------Media Queries Index 714px--------------------------------------------------*/
 
 
-@media screen and (max-width: 714px) {
+@media screen and (max-width: 719px) {
 
         .index {
                 min-height: 150vh;
                 grid-template-areas: "header"
-                                     "main"
+                                     
                                      "main"
                                      "footer";
 
-                grid-template-columns: 1fr;
-                grid-template-rows: 690px 61% 1% 1700px;
+                grid-template-columns: 100%;
+                grid-template-rows: 690px 4000px 1700px;
 
         }
 
@@ -717,26 +745,65 @@ main {
 
 
 
-        .arriba a {
-
-                padding: 2px;
-                margin-right: 0px;
-
-        }
-
-        .navFooter ul li a {
-
-                width: 179px;
-
-
-        }
 
         .redesIndex{
 
-                margin-left: 140px;
+                margin-right: 50px;
+        }
+
+        
+
+        .logoFooter img{
+
+                width: 150px;
+        }
+
+}
+
+/*-------------------------------Media Queries Index 482px--------------------------------------------------*/
+
+@media screen and (max-width: 482px) {
+
+        .index {
+                min-height: 150vh;
+                grid-template-areas: "header"
+                                     
+                                     "main"
+                                     "footer";
+
+                grid-template-columns: 100%;
+                grid-template-rows: 690px 4050px 1900px;
+
         }
 
 
+.sobreNosotros h2{
+
+        font-size: 70px;
+}
+
+.arriba a {
+
+        display: none;
+    }
+
+    .logoFooter{
+            display: none
+    }
+
+
+
+    .footerIndex  {
+
+
+            justify-content: center;
+
+    }
+
+    .redesIndex{
+
+        margin-right: 90px;
+    }
 }
 
 
@@ -756,16 +823,24 @@ main {
                 min-height: 150vh;
 
                 grid-template-areas: "header main"
-                        "header footer";
+                                     "header footer";
 
-                grid-template-columns: 24% 76%;
-                grid-template-rows: 1fr 800px;
+                grid-template-columns: 30% 70%;
+                grid-template-rows: 1fr 850px;
         }
 
 
 
         .inicio {
                 flex-direction: column;
+        }
+
+
+        
+        .titulo{
+
+                font-size: 93px;
+               
         }
 
         .abajo {
@@ -811,9 +886,9 @@ main {
                 margin-left: 39%;
         }
 
-        .redesElectrica{
+        .redes{
+                margin-left: 120px;
 
-                margin-left: 110px;
         }
 }
 
@@ -829,14 +904,95 @@ main {
                 min-height: 150vh;
 
                 grid-template-areas: "header"
+                                      "main"
+                                     "footer";
+
+                grid-template-columns: 100%;
+                grid-template-rows: 690px 4500px 900px;
+        }
+
+
+        .inicio{
+
+                margin-left: 35px;
+        }
+      
+
+        .titulo {
+                font-size: 85px;
+        }
+
+        .logoFooter img{
+
+                width: 150px;
+        }
+
+        .redes{
+                margin-left: 70px;
+        }
+
+}
+
+
+/*---------------------Media Queries Guitarras Electricas/Acusticas 482px---------*/
+
+@media screen and (max-width:482px) {
+
+        .guitarrasElectricas,
+        .guitarrasAcusticas {
+                min-height: 150vh;
+
+                grid-template-areas: "header"
+                                      "main"
+                                     "footer";
+
+                grid-template-columns: 100%;
+                grid-template-rows: 690px 4500px 900px;
+        }
+
+
+        .footerGuitarrasE, .footerGuitarrasA{
+
+                justify-content: center;
+        }
+
+        .redes{
+                margin-right: 90px;
+        }
+
+        .arriba a {
+
+                display: none;
+            }
+        
+            .logoFooter{
+                    display: none
+            }
+        
+            .redes{
+
+                margin-left: 100px;
+            }
+
+
+}
+
+/*---------------------Media Queries Bajos 700px---------*/
+
+@media screen and (max-width:700px) {
+
+        .bajos {
+                min-height: 150vh;
+
+                grid-template-areas: "header"
                         "main"
                         "footer";
 
                 grid-template-columns: 100%;
-                grid-template-rows: 12% 76% 15%;
+                grid-template-rows: 690px 2400px 900px;
         }
 
-
+        
         nav ul {
 
                 align-items: center;
@@ -847,15 +1003,23 @@ main {
                 font-size: 85px;
         }
 
+        .logoFooter img{
+
+                width: 150px;
+        }
+
+        .redes{
+                margin-left: 70px;
+        }
+
 
 }
 
 
+/*---------------------Media Queries Bajos 482px---------*/
 
+@media screen and (max-width:482px) {
 
-/*---------------------Media Queries Bajos 700px---------*/
-
-@media screen and (max-width:700px) {
         .bajos {
                 min-height: 150vh;
 
@@ -864,8 +1028,9 @@ main {
                         "footer";
 
                 grid-template-columns: 100%;
-                grid-template-rows: 18% 65% 22%;
+                grid-template-rows: 690px 2400px 900px;
         }
+
 
 
 }
@@ -879,16 +1044,56 @@ main {
                 min-height: 150vh;
 
                 grid-template-areas: "header"
-                        "main"
-                        "footer";
+                                     "main"
+                                     "footer";
 
                 grid-template-columns: 100%;
-                grid-template-rows: 14% 70% 18%;
+                grid-template-rows: 690px 3500px 900px;
+        }
+
+     
+
+      
+
+}
+
+/*---------------------Media Queries Amplificadores 482px---------*/
+
+@media screen and (max-width:482px) {
+        .amp {
+                min-height: 150vh;
+
+                grid-template-areas: "header"
+                                     "main"
+                                     "footer";
+
+                grid-template-columns: 100%;
+                grid-template-rows: 690px 3500px 900px;
+        }
+
+        .logoFooter{
+                
+                display: none;
+        }
+
+        .arriba{
+
+                display: none;
+        }
+
+        .footerAmps{
+
+                justify-content: center;
+        }
+
+        .redes{
+                margin-left:110px;
         }
 
 
 
 }
+
 
 
 /*---------------------Media Queries Consignaciones 700px---------*/
@@ -902,11 +1107,28 @@ main {
                         "footer";
 
                 grid-template-columns: 100%;
-                grid-template-rows: 35% 28% 43%;
+                grid-template-rows: 690px 550px 900px;
+        }
+
+}
+
+/*---------------------Media Queries Consignaciones 482px---------*/
+
+@media screen and (max-width:482px) {
+        .consignaciones {
+                min-height: 150vh;
+
+                grid-template-areas: "header"
+                                      "main"
+                                      "footer";
+
+                grid-template-columns: 100%;
+                grid-template-rows: 690px 500px 900px;
         }
 
 
 
+        
 }
 
 
@@ -929,8 +1151,8 @@ main {
                 grid-template-areas: "header main"
                         "header footer";
 
-                grid-template-columns: 0.25fr 1fr;
-                grid-template-rows: 1fr 1400px;
+                grid-template-columns: 30% 70%;
+                grid-template-rows: 1fr 1550px;
 
         }
 
@@ -943,13 +1165,17 @@ main {
                 flex-direction: column;
         }
 
-        
+        .redesContacto{
+
+                margin-left: 120px;
+        }
+       
 
 
 }
 
 
-/* Media Queries CONTACTO 600px*/
+/*----------------------------Media Queries CONTACTO 671px----------------------------------------------*/
 
 @media screen and (max-width: 671px) {
 
@@ -960,8 +1186,67 @@ main {
                 grid-template-areas: "header"
                         "main"
                         "footer";
-                grid-template-columns: 1fr;
-                grid-template-rows: 650px 1fr 1450px;
+                grid-template-columns: 100%;
+                grid-template-rows: 650px 1fr 1550px;
         }
 
+
+
+
+        .titulo {
+                font-size: 85px;
+        }
+
+        .logoFooter img{
+
+                width: 150px;
+        }
+
+        .redesContacto{
+
+                margin-left: 70px;
+        }
+
+   
+}
+
+
+
+
+/*----------------------------Media Queries CONTACTO 482px----------------------------------------------*/
+
+@media screen and (max-width: 482px) {
+
+
+        .contacto {
+
+                min-height: 150vh;
+                grid-template-areas: "header"
+                                "main"
+                        "footer";
+                grid-template-columns: 1fr;
+                grid-template-rows: 650px 1fr 1550px;
+        }
+
+        .logoFooter{
+                
+                display: none;
+        }
+
+        .arriba{
+
+                display: none;
+        }
+
+        .footerContacto{
+
+                justify-content: center;
+        }
+
+        .redesContacto{
+         
+                margin-right: 80px;
+        }
+
+        
 }
